Clean-up in preparation for PR.