@@ -19,8 +19,6 @@ apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'net.corda.plugins.publish-utils'
 apply plugin: 'com.jfrog.artifactory'
 
-// CordaCaplet using 'sun.misc.Signal'
-
 description 'Corda node modules'
 
 //noinspection GroovyAssignabilityCheck
@@ -204,16 +202,7 @@ dependencies {
 
 tasks.withType(JavaCompile) {
     // Resolves a Gradle warning about not scanning for pre-processors.
-//    options.compilerArgs << '-proc:none' << '--add-exports' << 'java.unsupported/sun.misc=ALL-UNNAMED'  << '--add-exports' << 'java.base/sun.security.util=ALL-UNNAMED' << '--add-exports' << 'java.base/sun.security.x509=ALL-UNNAMED'
-
-//    moduleOptions {
-//        addExports = [
-//                'java.unsupported/sun.misc.Unsafe': 'ALL-UNNAMED'
-//        ]
-//    }
-
-//    jvmArgs('--add-exports', 'java.unsupported/sun.misc.Unsafe=ALL-UNNAMED')
-
+    options.compilerArgs << '-proc:none'
 }
 
 tasks.withType(Test) {
